bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/frame_same_as_base_frame.error_regex
Frame: \[frame\] has the same name as it's base frame. This case is not supported.
